# imu-data-processing-system

./: .gitmodules  CMakeLists.txt  README.md
src/: IMUDataProvider.h  IMUPublisher.cpp  IMUPublisher.h  IMUSocketHandler.h  IMUSubscriber.cpp  IMUSubscriber.h  IMUTypes.h  Parameters.h  RandomIMUDataProvider.cpp  RandomIMUDataProvider.h  publisher.cpp  subscriber.cpp  utils.cpp  utils.h
src/ahrs/: AHRS.cpp  AHRS.h  AHRSFactory.cpp  AHRSFactory.h  MadgwickAHRS.cpp  MadgwickAHRS.h  SimpleAHRS.cpp  SimpleAHRS.h  VariantAHRS.h
src/communication/: IMUPublisher.cpp  IMUPublisher.h  IMUSocketHandler.cpp  IMUSocketHandler.h  IMUSubscriber.cpp  IMUSubscriber.h
src/core/: AHRSType.h  Parameters.h  PayloadIMU.h
src/providers/: IMUDataProvider.h  RandomIMUDataProvider.cpp  RandomIMUDataProvider.h
src/utils/: utils.cpp  utils.h
